--- a/03-JavaScript_02-Homework_Develop_style.css
+++ b/03-JavaScript_02-Homework_Develop_style.css
@@ -74,13 +74,13 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: rgb(8, 175, 30);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
   color: hsl(0, 0%, 100%);
   display: inline-block;
-  font-size: 22px;
+  font-size: 24px;
   line-height: 22px;
   margin: 16px 16px 16px 20px;
   padding: 14px 34px;
