--- a/03-JavaScript_02-Homework_Develop_style.css
+++ b/03-JavaScript_02-Homework_Develop_style.css
@@ -74,7 +74,7 @@ header {
 
 .btn {
   border: none;
-  background-color: rgb(8, 175, 30);
+  background-color: rgb(8, 175, 30); /* changed color of the botton to green because green means go to make it more intuitive */
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
